# describer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: helpers.rs  lib.rs
tests/: err_tuple_struct.rs  err_tuple_struct.stderr  hide_name.rs  hide_optional.rs  keyval_collections.rs  linear_collections.rs  multi_error_test.rs  multi_error_test.stderr  multiple_types.rs  optionals.rs  progress.rs  separator.rs  simple.rs  simple_enum.rs  unit.rs
